MODIFIED: hero description

--- a/app/src/sass/components/_components.sass
+++ b/app/src/sass/components/_components.sass
@@ -53,8 +53,10 @@ nav.menu
     right: 0
     bottom: 0
     left: 0
-    max-width: 870px
     color: $white-color
+
+    & p.heroDescription
+      max-width: 870px
 
 .coundownSection
   position: relative
