MODIFIED: remove p tag

--- a/app/src/sass/components/_components.sass
+++ b/app/src/sass/components/_components.sass
@@ -55,7 +55,7 @@ nav.menu
     left: 0
     color: $white-color
 
-    & p.heroDescription
+    & .heroDescription
       max-width: 870px
 
 .coundownSection
